# game_of_life

./: CMakeLists.txt  README.md
src/: alloc.c  alloc.h  evolve.c  evolve.h  game.c  game.h  generator.c  generator.h  gifenc.c  gifenc.h  main.c  makefile  nieghbors.c  nieghbors.h  solver.c  solver.h  struct.h  tester.c  tester.h
